--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">And Mary said, Behold the handmaid of the Lord; be it unto me according to thy word. And the angel departed from her. - Luke‬ ‭1:38‬ ‭KJV‬‬</div>
+  <div id="verse">Delight thyself also in the Lord; and he shall give thee the desires of thine heart.”
+‭‭Psalms‬ ‭37:4‬ ‭KJV‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">I think that this verse tells us to accept God's will even when it might seem that we cannot handle the burden for what that means.</div>
+  <div id="thoughts-box">The more trust we put in him the more we receive from him</div>
   <script src="script.js"></script>
 </body>
 </html>
