--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">Delight thyself also in the Lord; and he shall give thee the desires of thine heart.”
+  <div id="verse">Delight thyself also in the Lord; and he shall give thee the desires of thine heart.
 ‭‭Psalms‬ ‭37:4‬ ‭KJV‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">The more trust we put in him the more we receive from him</div>
+  <div id="thoughts-box">The more trust we put in him the more we receive from him.</div>
   <script src="script.js"></script>
 </body>
 </html>
