--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">Jesus said unto him, Thou shalt love the Lord thy God with all thy heart, and with all thy soul, and with all thy mind.”
+  <div id="verse">Jesus said unto him, Thou shalt love the Lord thy God with all thy heart, and with all thy soul, and with all thy mind.
 ‭‭Matthew‬ ‭22:37‬ ‭KJV‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">Is we give all of us to the Lord he will make our paths straight.</div>
+  <div id="thoughts-box">If we give all of us to the Lord he will make our paths straight.</div>
   <script src="script.js"></script>
 </body>
 </html>
