--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="verse">“He sent from above, he took me, he drew me out of many waters.”
 ‭‭Psalms‬ ‭18:16‬ ‭KJV‬‬‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">If we give all of us to the Lord he will make our paths straight.</div>
+  <div id="thoughts-box">God will take us out of harm and bad situations</div>
   <script src="script.js"></script>
 </body>
 </html>
