--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">“He sent from above, he took me, he drew me out of many waters.”
-‭‭Psalms‬ ‭18:16‬ ‭KJV‬‬‬‬‬‬‬‬</div>
+  <div id="verse">After these things the word of the Lord came unto Abram in a vision, saying, Fear not, Abram: I am thy shield, and thy exceeding great reward.
+‭‭Genesis‬ ‭15:15‬ ‭KJV‬‬‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">God will take us out of harm and bad situations</div>
+  <div id="thoughts-box">The Lord Jesus Christ is our reward</div>
   <script src="script.js"></script>
 </body>
 </html>
