--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">After these things the word of the Lord came unto Abram in a vision, saying, Fear not, Abram: I am thy shield, and thy exceeding great reward.
-‭‭Genesis‬ ‭15:15‬ ‭KJV‬‬‬‬‬‬‬‬</div>
+  <div id="verse">"After these things the word of the Lord came unto Abram in a vision, saying, Fear not, Abram: I am thy shield, and thy exceeding great reward."
+- ‭‭Genesis‬ ‭15:15‬ ‭KJV‬‬‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
   <div id="thoughts-box">The Lord Jesus Christ is our reward</div>
   <script src="script.js"></script>
