--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">"After these things the word of the Lord came unto Abram in a vision, saying, Fear not, Abram: I am thy shield, and thy exceeding great reward."
-- ‭‭Genesis‬ ‭15:15‬ ‭KJV‬‬‬‬‬‬‬‬</div>
+  <div id="verse">"These things have I spoken unto you, that my joy might remain in you, and that your joy might be full."
+- ‭‭John‬ ‭15:11‬ ‭KJV‬‬‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">The Lord Jesus Christ is our reward</div>
+  <div id="thoughts-box">Jesus wants us to love one another and gives to us what we ask when we do so which fulfills our joy.</div>
   <script src="script.js"></script>
 </body>
 </html>
