--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">"These things have I spoken unto you, that my joy might remain in you, and that your joy might be full."
-- ‭‭John‬ ‭15:11‬ ‭KJV‬‬‬‬‬‬‬‬</div>
+  <div id="verse">“Then he called his twelve disciples together, and gave them power and authority over all devils, and to cure diseases.”
+‭‭Luke‬ ‭9:1‬ ‭KJV‬‬‬‬‬‬‬‬‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">Jesus wants us to love one another and gives to us what we ask when we do so which fulfills our joy.</div>
+  <div id="thoughts-box">We have authority over sickness and disease in the name of The Lord Jesus Christ</div>
   <script src="script.js"></script>
 </body>
 </html>
