--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <header><h1>Daily Verse</h1></header>
 <body>
-  <div id="verse">“Then he called his twelve disciples together, and gave them power and authority over all devils, and to cure diseases.”
-‭‭Luke‬ ‭9:1‬ ‭KJV‬‬‬‬‬‬‬‬‬‬</div>
+  <div id="verse">"For he is our peace, who hath made both one, and hath broken down the middle wall of partition between us;”
+‭‭Ephesians‬ ‭2:14‬ ‭KJV‬‬</div>
   <div id="thoughts">Thoughts</div>
-  <div id="thoughts-box">We have authority over sickness and disease in the name of The Lord Jesus Christ</div>
+  <div id="thoughts-box">The Lord Jesus Christ is our peace. This verse explains itself.</div>
   <script src="script.js"></script>
 </body>
 </html>
